added row, col, and copy methods to image

--- a/TODO.txt
+++ b/TODO.txt
@@ -17,7 +17,7 @@
   to any color), grayscale, quantization, color shifting, etc.
 - Add default color tables (e.g. web-safe, grayscale, etc)
 - Implement interlacing
-- Drawing: General lines (diagonal, width > 1, anchor points...)
+- Drawing: Bucket tool
 - Drawing: Grid, geometric shapes (e.g. ellipses), patterns (like in Excel)...
 - In the bound checks for line/rect we're not taking the width into consideration
 - Enforce that we either have a GCT or every frame has an LCT, or at least, have
