started implementing circles

--- a/TODO.txt
+++ b/TODO.txt
@@ -19,6 +19,7 @@
 - Implement interlacing
 - Drawing: Bucket tool
 - Drawing: Grid, geometric shapes (e.g. ellipses), patterns (like in Excel)...
+- Polar coordinates, parameterized curves, etc.
 - In the bound checks for line/rect we're not taking the width into consideration
 - Enforce that we either have a GCT or every frame has an LCT, or at least, have
   a warning when that is done, and a hard switch that is needed to enable not having
