star example, minor fixes

--- a/TODO.txt
+++ b/TODO.txt
@@ -38,10 +38,9 @@ Roadmap:
   to any color), grayscale, quantization, color shifting, etc.
 - Add default color tables (e.g. web-safe, grayscale, etc)
 - Implement interlacing
-- Geometry: Convex hull
+- Geometry: Convex hull, barycenter, convex combinations...
 - Drawing: Bucket tool
 - Drawing: Grid, geometric shapes (e.g. polygons), patterns (like in Excel)...
-- Polar coordinates, parameterized curves, etc.
 - In the bound checks for line/rect we're not taking the width into consideration
 - Enforce that we either have a GCT or every frame has an LCT, or at least, have
   a warning when that is done, and a hard switch that is needed to enable not having
